inference/llm-inference-gke-fluid-compute/test-curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-curl-pod
  namespace: default
spec:
  tolerations:
  - operator: "Exists"
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "3600"]
